libs/pavex_cli/tests/ui_tests/remote_callable_paths_must_be_absolute/expectations/stderr.txt
Error: 
  × `new_logger` is not a fully-qualified import path.
    ╭─[src/lib.rs:9:1]
  9 │     let mut bp = AppBlueprint::new();
 10 │     bp.constructor(f!(new_logger), Lifecycle::Singleton);
    ·                    ───────┬──────
    ·                           ╰── The relative import path was registered here
 11 │     bp.route(f!(crate::handler), "/home");
    ╰────
  help: If it is a local import, the path must start with `crate::`.
        If it is an import from a dependency, the path must start with the
        dependency name (e.g. `dependency::`).